--- a/composer.json
+++ b/composer.json
@@ -8,8 +8,8 @@
     "require": {
 		"php": ">=5.6.4",
 		"laravel/framework": "5.*",
-        "cviebrock/eloquent-sluggable": "4.6",
-        "kalnoy/nestedset": "^4.3",
+        "cviebrock/eloquent-sluggable": "4.*",
+        "kalnoy/nestedset": "4.*",
         "intervention/image": "2.*"
     },
     "autoload": {
