--- a/composer.json
+++ b/composer.json
@@ -6,6 +6,8 @@
     "license": "MIT",
     "type": "project",
     "require": {
+		"php": ">=5.6.4",
+		"laravel/framework": "5.*",
         "cviebrock/eloquent-sluggable": "4.*",
         "kalnoy/nestedset": "4.*",
         "intervention/image": "2.*"
