--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
     "name": "brainor-rus/zeus-admin",
-    "description": "Admin's panel",
+    "description": "Admin's panel. composer require \"brainor-rus/zeus-admin\":\"1.*\"",
     "keywords": ["Zeus", "Zeus admin", "laravel admin", "admin panel"],
 	"homepage": "https://github.com/brainor-rus/zeus",
     "license": "MIT",
