--- a/composer.json
+++ b/composer.json
@@ -25,7 +25,7 @@
         "laravel": {
             "providers": [
                 "Zeus\\Admin\\Providers\\ZeusAdminServiceProvider",
-                "Artesaos\\SEOTools\\Providers\\SEOToolsServiceProvider",
+                "Artesaos\\SEOTools\\Providers\\SEOToolsServiceProvider"
             ],
             "aliases": {
                 "SEO": "Artesaos\\SEOTools\\Facades\\SEOTools"
