--- a/composer.json
+++ b/composer.json
@@ -7,7 +7,7 @@
     "type": "project",
     "require": {
 		"php": ">=5.6.4",
-		"laravel/framework": ">=5.*",
+		"laravel/framework": ">=5.6",
         "cviebrock/eloquent-sluggable": "4.*",
         "kalnoy/nestedset": "4.*",
         "intervention/image": "2.*",
