--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "dependencies": {
         "argon-design-system-free": "^1.0.1",
         "deparam": "^1.0.5",
+        "node-sass": "^4.14.1",
         "vue-cookie": "^1.1.4",
         "vue-router": "^3.0.1",
         "vuex": "^3.0.1",
